ops/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-management-app
  labels:
    app: project-management-app
spec:
  selector:
    app: project-management-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
